--- a/main.html
+++ b/main.html
@@ -11,8 +11,10 @@
 	<div>
 	<h1><ul>Hello World</ul></h1>
 	<H2><ul>Introducing of Accio Ipsum</ul></H2>
-	<p>Accio ipsum dolor sit amet,join course,solve assignmets,get placed above 5 lpa and live life
-	king size.</p>
+	<p>
+	Accio ipsum dolor sit amet,join course,solve assignmets,get placed above 5 lpa and live life
+	king size.
+	</p>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
