--- a/main.html
+++ b/main.html
@@ -10,15 +10,13 @@
 	<!-- the entire body must be written by student -->
 	<div>
 	<h1><ul>Hello World</ul></h1>
-	<H2><ul>Introducing of Accio Ipsum</ul></H2>
+	<h2><ul>Introducing of Accio Ipsum</ul></h2>
 	<p>
-	Accio ipsum dolor sit amet,join course,solve assignmets,get placed above 5 lpa and live life
+	Accio ipsum dolor sit amet,join course,solve assigments,get placed above 5 lpa and live life
 	king size.
 	</p>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
-
 </body>
-
 </html>
