--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 	<h1><ul>Hello World</ul></h1>
 	<h2><ul>Introducing of Accio Ipsum</ul></h2>
 	<p>
-	Accio ipsum dolor sit amet,join course,solve assigments,get placed above 5 lpa and live life
-	king size.
+	Accio ipsum dolor sit amet,join course,solve assigments,get placed above 5 lpa and live 
+    life king size.
 	</p>
 	</div>
     <script type="text/javascript" src="./script.js">
