--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-	<h1><ul>Hello World</ul></h1>
-	<h2><ul>Introducing of Accio Ipsum</ul></h2>
+	<h1>Hello World</h1>
+	<h2>Introducing of Accio Ipsum</h2>
 	<p>
-	Accio ipsum dolor sit amet,join course,solve assigments,get placed above 5 lpa and live 
+	Accio ipsum dolor sit amet, join course, solve assigments,get placed above 5 lpa and live 
     life king size.
 	</p>
 	</div>
