--- a/main.html
+++ b/main.html
@@ -11,10 +11,8 @@
 	<div>
 	<h1>Hello World</h1>
 	<h2>Introducing of Accio Ipsum</h2>
-	<p>
-	Accio ipsum dolor sit amet, join course, solve assigments,get placed above 5 lpa and live 
-    life king size.
-	</p>
+	<p>Accio ipsum dolor sit amet, join course, solve assigments, get placed above 5 lpa and live 
+    life king size.</p>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
